# bevy_rich_text3d

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
assets/: rainbow.wgsl  typewriter.wgsl  uv.wgsl  wiggle.wgsl
assets/shaders/: text3d.wgsl
examples/: 3d.rs  arabic.rs  colorful.rs  doubling.rs  lines.rs  loading_screen.rs  lorem.txt  lorem_arabic.txt  lorem_cn.txt  multifont.rs  prepare.rs  rainbow.rs  simple.rs  spooky.rs  stats.rs  typewriter.rs  underline.rs
src/: align.rs  atlas.rs  change_detection.rs  color_table.rs  fetch.rs  layers.rs  lib.rs  line.rs  loading.rs  mesh_util.rs  misc.rs  parse.rs  prepare.rs  render.rs  styling.rs  tess.rs  text3d.rs
