[package]
name = "bevy_rich_text3d"
version = "0.4.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy_rich_text3d"
description = """
Mesh based raster rich text implementation for bevy.
"""
keywords = ["bevy", "text", "font"]

[features]
default = ["2d", "3d"]
2d = ["bevy/bevy_sprite"]
3d = ["bevy/bevy_pbr"]
reflect = []

[dependencies]
bevy = { version = "0.16.0", default-features = false, features = [
  "bevy_log",
  "bevy_image",
  "bevy_render",
  "bevy_asset",
  "bevy_window",
]}
cosmic-text = "0.14.2"
rustc-hash = "2.1.1"
sys-locale = "0.3.2"
thiserror = "2.0.9"
zeno = "0.3.2"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
bevy = "0.16"
bevy_rectray = "0.3.1"
fastrand = "2.3.0"
